name:                levenstein-matrix
version:             0.1.0.0
synopsis:            A small webservice to compute the levenstein distance of a list of words.
description:         Small webapp computing levenstein distances of different words.
license:             BSD3
license-file:        LICENSE
author:              Anselm Jonas Scholl
maintainer:          anselm.scholl@tu-harburg.de
copyright:           (c) 2018 Anselm Jonas Scholl
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable levenstein-matrix
  main-is:             Main.hs
  other-modules:       Levenstein
  build-depends:       base >=4.10 && < 5, text, warp, array, wai, http-types, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
